packages/type@9175499/test/error/ensure.load.js
montageDefine("9175499","test/error/ensure",{dependencies:["chai","../../error/ensure"],factory:function(e,r,n){"use strict";var t=e("chai").assert,o=e("../../error/ensure");describe("error/ensure",function(){it("Should return input value",function(){var e=new Error;t.equal(o(e),e)}),it("Should crash on invalid value",function(){try{throw o(null),new Error("Unexpected")}catch(e){t.equal(e.name,"TypeError"),t(e.message.includes("is not an error object"))}})})}});